<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corex</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ericzhao0325@163.com">ericx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tinyxml2</depend>
  <depend>eigen3_vendor</depend>
  <depend>ceres_vendor</depend>
  <depend>opencv_vendor</depend>
  <depend>perception</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
